--- a/src/About.css
+++ b/src/About.css
@@ -39,9 +39,12 @@
 } 
 
 .profile__photo {
-    animation: rotation 10s infinite linear;
     height: 100%;
     width: 100%;
+}
+
+.profile__photo:hover {
+    animation: scale 2s linear;
 }
 
 .about__photo__right {
@@ -91,15 +94,23 @@
 }
 
 
-@keyframes rotation {
+/* @keyframes rotation {
     from {
       transform: rotate(0deg);
     }
     to {
       transform: rotate(359deg);
     }
-  }
+  } */
 
+  @keyframes scale {
+    from {
+      transform: scale(1);
+    }
+    to {
+      transform: scale(1.2);
+    }
+  }
 
 
 @media (max-width: 700px) {
