--- a/src/Experience.css
+++ b/src/Experience.css
@@ -15,8 +15,11 @@
     justify-content: center;
     padding-left: 0;
     padding-right: 0;
-    color: bisque;
+    color: black;
     font-size: 0.8rem;   
+    background-color: white;
+    border-radius: 15px;
+    padding: 2%;
 }
 
 .experience__right {
@@ -31,11 +34,16 @@
 }
 
 .experience__title {
-    color: grey;
+    color: blanchedalmond;
+    background-color: brown;
+    padding: 2%;
+    margin-bottom: 5px;
+    border-radius: 15px;
 }
 
 .experience__text {
-    color: white;
+    color: black;
+    font-weight: 500;
 }
 
 .experience__title:hover {
@@ -43,10 +51,24 @@
 }
 
 .experience__text:hover {
-    color: green;
+    color: white;
+    background-color: black;
+    padding: 2%;
+    font-size: 1.2em;
+    font-weight: 600;
+    border-radius: 10px;
+    animation: scale 0.15s linear;
 }
 
 .experience__right:hover {
     transform: translateY(-10px);
 }
 
+@keyframes scale {
+    from {
+      transform: scale(1);
+    }
+    to {
+      transform: scale(1.03);
+    }
+  }
