--- a/src/Contact.css
+++ b/src/Contact.css
@@ -42,7 +42,10 @@
   }
 
   .contact__socials > .small:hover {
-    filter:invert();
+    /* filter:invert(); */
+    border: 1px solid black;
+    background-color: white;
+    color: black;
   }
 
   .contact__main {
